# csgo-webradar-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
src/: CMakeLists.txt  engine.cpp  engine.h  global.h  main.cpp  offsets.cpp  offsets.h
src/features/: fradar.cpp  fradar.h
src/json/: json-forwards.h  json.h  jsoncpp.cpp
src/sdk/: sdk.h  types.h
